rollDices + rollDice + swagger

--- a/Dice/src/main/resources/application.properties
+++ b/Dice/src/main/resources/application.properties
@@ -1,1 +1,14 @@
-spring.application.name=Dice
+spring.application.name=dice
+
+server.port=8081
+
+spring.h2.console.enabled=true
+
+spring.h2.console.path=/h2-console
+
+spring.jpa.show-sql=false
+
+spring.datasource.url=jdbc:h2:mem:devDb
+
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
